Move assets to resources directory and update .gitignore
Renamed logo and version files from 'about' to 'resources' for better organization. Added a new horizontal logo image to 'resources'. Updated .gitignore to exclude ffmpeg2pass log files.

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,6 @@ EXE配布手順書.md
 build_exe.ps1
 create_release.bat
 TODO.md
+ffmpeg2pass-0.log.mbtree
+ffmpeg2pass-0.log.temp
+ffmpeg2pass-0.log.mbtree.temp
